Den null Ordner zusätzlich aufgenommen ins gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Muss das auch rein?
+null/
+
 
 # Created by https://www.gitignore.io/api/sbt,windows,intellij,playframework
 # Edit at https://www.gitignore.io/?templates=sbt,windows,intellij,playframework
