--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,11 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
 
+# Default database configuration using H2 database engine in an in-memory mode
 db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:mem:play"
+
+# JNDI configuration
+db.default.jndiName=DefaultDS
+# JPA
+jpa.default=defaultPersistenceUnit
